# isc-connector

./: pyproject.toml
isc_connector/: errors.py  seminar_downloader.py
