[project]
name = "isc-connector"
version = "0.1.0"
description = ""
authors = [
    {name = "Tjark Saul",email = "pypi@appfel.dev"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "requests (>=2.32.5,<3.0.0)",
]

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
